# WhatInstalled

./: .gitignore  README.md  pyproject.toml  requirements-test.txt  setup.py  whatinstalled.py
.github/workflows/: publish.yml  release.yml
outputs/: dnf_output.txt  dpkg_output.txt  lua_output.txt  macport_outdated_output.txt  macport_output.txt  npm_outdated_output.txt  yum_update.txt
scripts/: lint.sh  test.sh
src/whatinstalled/: linux.py  lua.py  mac.py  main.py  node.py  python.py  ruby.py
src/whatinstalled/installers/: base.py
src/whatinstalled/installers/javascript/: __init__.py  npm.py  yarn.py
src/whatinstalled/installers/linux/: __init__.py  dnf.py  dpkg.py  yum.py
src/whatinstalled/installers/lua/: __init__.py  luarocks.py
src/whatinstalled/installers/mac/: __init__.py  homebrew.py  macport.py  pkgutil.py
src/whatinstalled/installers/python/: __init__.py  pip.py  pipx.py
src/whatinstalled/installers/ruby/: __init__.py  gem.py
